[gd_scene load_steps=2 format=3 uid="uid://c07stqm8ytusy"]

[ext_resource type="Script" path="res://scenes/army/army_gui.gd" id="1_k3gmf"]

[node name="ArmyGui" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_k3gmf")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0
alignment = 1

[node name="MoveButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "Mover"

[node name="AttackButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "Atacar"

[node name="DefendButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "Defender"

[node name="WaitButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "Esperar"

[connection signal="pressed" from="Panel/VBoxContainer/MoveButton" to="." method="_on_move_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/AttackButton" to="." method="_on_attack_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/DefendButton" to="." method="_on_defend_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/WaitButton" to="." method="_on_end_turn_button_pressed"]
